--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 * {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Bebas Neue', cursive;
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -11,6 +11,10 @@
 
 html {
   font-size: 62.5%;
+}
+
+body {
+ background-color: #40b48e;
 }
 
 .App {
@@ -23,8 +27,8 @@ h1 {
   font-size: 8rem;
   letter-spacing: 0.1rem;
   font-style: italic;
-  color: #40b48e;
-  text-shadow: 0 0.2rem 5rem rgb(119, 115, 115);
+  color: #fff;
+  text-shadow: 0 0 1rem rgb(119, 115, 115);
   text-transform: uppercase;
   margin: 4rem 0;
 }
@@ -35,10 +39,10 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #d3d3d3;
+  /* background-color: #d3d3d3; */
   border-radius: 0.5rem;
   margin-bottom: 5rem;
-  box-shadow: 1rem 2rem 5rem #aaa;
+  /* box-shadow: 1rem 2rem 5rem #aaa; */
   position: relative;
 }
 
@@ -63,23 +67,36 @@ h1 {
 .search-form input {
   font-size: 1.6rem;
   border: none;
-  border-bottom: 0.1rem solid #ccc;
   margin: 0 0.5rem;
   border-radius: 0.5rem;
   height: 3rem;
 }
 
+.search-form input::placeholder {
+  color: #fff;
+}
+
 .search-form input[type="text"] {
-  padding: 0 0.5rem;
+  padding: 0 0 0 1rem;
   width: 60%;
   color: #555;
 }
 
 .search-form input[type="submit"] {
   width: 25%;
+  margin-left: 1rem;
   text-transform: uppercase;
-  background-color: #40b48e;
+  background-color: #B44066;
   color: #fff;
+  font-weight: 400;
+  transition: all .3s ease;
+  cursor: pointer;
+}
+
+.search-form input[type="submit"]:hover {
+  background-color: #fff;
+  color: #B44066;
+  border: 1px solid #B44066;
 }
 
 .recipes {
@@ -100,7 +117,7 @@ h1 {
   padding: 2rem;
   position: relative;
   border-radius: 0.5rem;
-  box-shadow: 2rem 3rem 5rem #aaa;
+  box-shadow: 1rem 2rem 3rem rgb(78, 78, 78);
 }
 
 .recipe h2 {
@@ -108,7 +125,7 @@ h1 {
   border-radius: 0.5rem;
   padding: 0.3rem 0.5rem;
   position: absolute;
-  top: 2.5rem;
+  /* top: 2.5rem; */
   left: 2.5rem;
   right: 2.5rem;
   font-size: 2.5rem;
@@ -128,13 +145,23 @@ h1 {
 }
 
 .recipe button {
+  margin-top: 1.5rem;
   font-size: 2rem;
+  font-weight: 300;
   text-transform: uppercase;
   color: #fff;
   background-color: #40b48e;
   border: none;
   border-radius: 0.5rem;
   height: 3rem;
+  cursor: pointer;
+  transition: all .3s ease;
+}
+
+.recipe button:hover {
+  background-color: #fff;
+  color: #40b48e;
+  border: 1px solid #40b48e;
 }
 
 .ingredient-list {
@@ -145,15 +172,15 @@ h1 {
 }
 
 .ingredient-list li {
-  margin: 0.5rem 0;
+  margin: 1rem;
 }
 
 .ingredient-text {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: #888;
 }
 
 .ingredient-weight {
   color: #40b48e;
-  font-size: 1.3rem;
+  font-size: 1.6rem;
 }
